# OOD_2_1

./: CMakeLists.txt
2_1/: Observer.h  WeatherData.h
2_2/: Observer.h  Test.cpp  WeatherData.h
2_3/: Observer.h  Test.cpp
2_4/: Observer.h  WeatherData.h  main.cpp
2_5/: Observer.h  WeatherData.h  main.cpp
